--- a/src/components/DownTimeCodes/Actions/Actions.css
+++ b/src/components/DownTimeCodes/Actions/Actions.css
@@ -3,8 +3,16 @@
   right: 50px;
   top: 1px;
   z-index: 10;
-  opacity: 0;
+  opacity: 1;
   transition: opacity 250ms ease-in-out;
+}
+
+@media only screen
+and (min-width: 414px){
+  .codes--actions {
+    opacity: 0;
+    margin-right: 20px;
+  }
 }
 
 .codes--action {
