--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
 body {
-  margin: 50px 0 0 0;
+  margin: 0 0 0 0;
   background: #eee;
   padding: 0;
   font-family: sans-serif;
 }
 
 
+@media only screen
+and (min-width: 414px){
+  body {
+    margin-top: 50px;
+  }
+}
